# 32.5.2

./: CMakeLists.txt
include/: header.h
src/: main.cpp
